--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
 
 
   <!-- Footer -->
-<footer  id="f" class="final">
+<footer id="f" class="final">
   <div class="container">
     <div class="final-icons">
-      <i class="fab fa-google" aria-label="جوجل"></i>
+      <i class="fas fa-envelope" aria-label="البريد الإلكتروني"></i>
+      <a href="mailto:hr@jankani.ae" class="email">hr@jankani.ae</a>
       <i class="fas fa-phone" aria-label="هاتف"></i>
       <a href="tel:+9714880991" class="phone-number">+971 4880 991</a>
     </div>
@@ -102,6 +103,7 @@
 South 6, Dubai, U.A.E.</p>
   </div>
 </footer>
+
 
   <script src="./js/medical.js"></script>
 </body>
